# pico-led-matrix

./: CMakeLists.txt  README.md  brightness.c  common.cmake  default.nix  language.cmake  leds.c  main.c  matrix.c  matrix.h  warnings.cmake
circles/: CMakeLists.txt  main.c
gradient/: main.c
lib/: bootsel.c  bootsel.h  brightness.c  brightness.h  char.c  char.h  countdown.c  countdown.h  font.c  matrix.c  matrix.h  num.c  num.h
life/: main.c
text/: CMakeLists.txt  main.c  pico_sdk_import.cmake
